--- a/src/client/index.html
+++ b/src/client/index.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
     />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <main>
@@ -66,175 +67,6 @@
       <span class="done">No regressions! 🎉</span>
     </main>
   </body>
-  <style>
-    main {
-      display: grid;
-      grid-template-columns: auto 1fr;
-      gap: var(--pico-block-spacing-horizontal);
-      padding: var(--pico-block-spacing-horizontal);
-      max-width: 1920px;
-    }
-    .items {
-      &:empty {
-        display: none;
-      }
-      &:has(.item) + .done {
-        display: none;
-      }
-    }
-    .done {
-      font-size: 60px;
-      height: calc(100cqh - 2 * var(--pico-block-spacing-vertical));
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .item {
-      margin: 20px;
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: auto auto;
-    }
-    header {
-      display: grid;
-      grid-template-columns: 1fr auto;
-    }
-    dl {
-      display: inline-flex;
-      gap: 0.5em;
-      align-self: center;
-    }
-    dd {
-      padding: 0;
-      margin: 0;
-      font-weight: bold;
-      &:after {
-        content: ":";
-      }
-    }
-    img-comparison-slider {
-      grid-column: span 2;
-      container-type: inline-size;
 
-      > img[slot] {
-        width: 100cqw;
-      }
-    }
-    form {
-      display: flex;
-      margin: 0;
-      gap: 20px;
-    }
-  </style>
-
-  <script type="module">
-    const onHashChange = () => {
-      const platform = "tmp";
-      document.querySelectorAll(".item").forEach((item) => {
-        item.hidden = platform && item.dataset.platform !== platform;
-      });
-      document.querySelectorAll(".platforms-nav a").forEach((link) => {
-        link.setAttribute(
-          "aria-current",
-          link.textContent === platform ? "page" : "false"
-        );
-      });
-    };
-    /**
-     * @typedef {Object} Result
-     * @property {string} fixture
-     * @property {string} test
-     * @property {string} name
-     * @property {string} referenceFile
-     * @property {string | null} failureFile
-     * @property {string | null} currentFile
-     * @property {Platform} platform
-     */
-    await fetch("/results")
-      .then((r) => r.json())
-      .then(
-        /** @param {Result[]} results */ (results) => {
-          results
-            .filter((result) => result.diffFile)
-            .forEach((result) => {
-              const item = document
-                .getElementById("item")
-                .content.cloneNode(true);
-              item.querySelector(".item").dataset.platform = result.platform;
-              item.querySelector(".item").dataset.result =
-                JSON.stringify(result);
-              item.querySelector("dt.fixture").textContent = result.fixture;
-              item.querySelector("dt.test").textContent = result.test;
-              item.querySelector("dt.name").textContent = result.name;
-              item.querySelector('img[slot="first"]').src =
-                `/files/${result.referenceFile}`;
-              item.querySelector('img[slot="second"]').src =
-                `/files/${result.diffFile}`;
-              item.querySelector(
-                'input[name="reference"][value="diff"]'
-              ).checked = true;
-              document.querySelector(".items").appendChild(item);
-            });
-
-          const platforms = [
-            ...new Set(results.map((result) => result.platform)),
-          ];
-          const platformItem = document.getElementById("platform-item");
-          const platformsNav = document.querySelector(".platforms-nav");
-          platforms.forEach((platform) => {
-            const item = platformItem.content.cloneNode(true);
-            item.querySelector("a").textContent = platform;
-            item.querySelector("a").href = `#${platform}`;
-            platformsNav.appendChild(item);
-          });
-
-          if (location.hash === "") {
-            const firstPlatformWithDiffs = platforms.find((platform) =>
-              results.some(
-                (result) => result.platform === platform && result.diffFile
-              )
-            );
-            if (firstPlatformWithDiffs) {
-              location.hash = firstPlatformWithDiffs;
-              onHashChange();
-            }
-          }
-        }
-      );
-    document.addEventListener("click", async (event) => {
-      if (event.target.tagName !== "BUTTON") return;
-      await fetch("/approvals", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: event.target.closest(".item").dataset.result,
-      }).then(() => {
-        event.target.closest(".item").remove();
-      });
-    });
-    document.addEventListener("change", (event) => {
-      if (event.target.type === "radio") {
-        document.querySelectorAll("img-comparison-slider").forEach((slider) => {
-          const result = JSON.parse(slider.closest(".item").dataset.result);
-          slider.querySelector('img[slot="second"]').src =
-            `/files/${result[`${event.target.value}File`]}`;
-          slider
-            .closest(".item")
-            .querySelector(
-              `input[name="reference"][value="${event.target.value}"]`
-            ).checked = true;
-        });
-      }
-    });
-    document.addEventListener("keydown", (event) => {
-      if (event.key === "c" || event.key === "d") {
-        const value = event.key === "c" ? "current" : "diff";
-        document
-          .querySelector(`input[name="reference"][value="${value}"]`)
-          .dispatchEvent(new Event("change", { bubbles: true }));
-      }
-    });
-    window.addEventListener("hashchange", onHashChange);
-  </script>
+  <script type="module" src="index.js"></script>
 </html>
